--- a/IDE_CarProject.uvprojx
+++ b/IDE_CarProject.uvprojx
@@ -14,16 +14,16 @@
       <uAC6>0</uAC6>
       <TargetOption>
         <TargetCommonOption>
-          <Device>MSP432P4111</Device>
+          <Device>MSP432P401R</Device>
           <Vendor>Texas Instruments</Vendor>
           <PackID>TexasInstruments.MSP432P4xx_DFP.3.2.6</PackID>
           <PackURL>http://software-dl.ti.com/msp430/msp430_public_sw/mcu/msp430/msp432cmsis/latest/exports/</PackURL>
-          <Cpu>IRAM(0x20000000,0x00040000) IRAM2(0x01000000,0x00040000) IROM(0x00000000,0x00200000) IROM2(0x00200000,0x00008000) CPUTYPE("Cortex-M4") FPU2 CLOCK(12000000) ELITTLE</Cpu>
+          <Cpu>IRAM(0x20000000,0x00010000) IRAM2(0x01000000,0x00010000) IROM(0x00000000,0x00040000) IROM2(0x00200000,0x00004000) CPUTYPE("Cortex-M4") FPU2 CLOCK(12000000) ELITTLE</Cpu>
           <FlashUtilSpec></FlashUtilSpec>
           <StartupFile></StartupFile>
-          <FlashDriverDll>UL2CM3(-S0 -C0 -P0 -FD01000000 -FC3E000 -FN2 -FF0MSP432P4xx_MainFlash2048kB -FS00 -FL0200000 -FF1MSP432P4xx_InfoFlash_A -FS1200000 -FL18000 -FP0($$Device:MSP432P4111$FlashARM\MSP432P4xx_MainFlash2048kB.FLM) -FP1($$Device:MSP432P4111$FlashARM\MSP432P4xx_InfoFlash_A.FLM))</FlashDriverDll>
+          <FlashDriverDll>UL2CM3(-S0 -C0 -P0 -FD01000000 -FCE000 -FN2 -FF0MSP432P4xx_MainFlash256kB -FS00 -FL040000 -FF1MSP432P4xx_InfoFlash -FS1200000 -FL14000 -FP0($$Device:MSP432P401R$FlashARM\MSP432P4xx_MainFlash256kB.FLM) -FP1($$Device:MSP432P401R$FlashARM\MSP432P4xx_InfoFlash.FLM))</FlashDriverDll>
           <DeviceId>0</DeviceId>
-          <RegisterFile>$$Device:MSP432P4111$Device\Include\msp.h</RegisterFile>
+          <RegisterFile>$$Device:MSP432P401R$Device\Include\msp.h</RegisterFile>
           <MemoryEnv></MemoryEnv>
           <Cmp></Cmp>
           <Asm></Asm>
@@ -33,7 +33,7 @@
           <SLE66CMisc></SLE66CMisc>
           <SLE66AMisc></SLE66AMisc>
           <SLE66LinkerMisc></SLE66LinkerMisc>
-          <SFDFile>$$Device:MSP432P4111$SVD\MSP432P4111.svd</SFDFile>
+          <SFDFile>$$Device:MSP432P401R$SVD\MSP432P401R.svd</SFDFile>
           <bCustSvd>0</bCustSvd>
           <UseEnv>0</UseEnv>
           <BinPath></BinPath>
@@ -246,12 +246,12 @@
               <IRAM>
                 <Type>0</Type>
                 <StartAddress>0x20000000</StartAddress>
-                <Size>0x40000</Size>
+                <Size>0x10000</Size>
               </IRAM>
               <IROM>
                 <Type>1</Type>
                 <StartAddress>0x0</StartAddress>
-                <Size>0x200000</Size>
+                <Size>0x40000</Size>
               </IROM>
               <XRAM>
                 <Type>0</Type>
@@ -276,12 +276,12 @@
               <OCR_RVCT4>
                 <Type>1</Type>
                 <StartAddress>0x0</StartAddress>
-                <Size>0x200000</Size>
+                <Size>0x40000</Size>
               </OCR_RVCT4>
               <OCR_RVCT5>
                 <Type>1</Type>
                 <StartAddress>0x200000</StartAddress>
-                <Size>0x8000</Size>
+                <Size>0x4000</Size>
               </OCR_RVCT5>
               <OCR_RVCT6>
                 <Type>0</Type>
@@ -301,12 +301,12 @@
               <OCR_RVCT9>
                 <Type>0</Type>
                 <StartAddress>0x20000000</StartAddress>
-                <Size>0x40000</Size>
+                <Size>0x10000</Size>
               </OCR_RVCT9>
               <OCR_RVCT10>
                 <Type>0</Type>
                 <StartAddress>0x1000000</StartAddress>
-                <Size>0x40000</Size>
+                <Size>0x10000</Size>
               </OCR_RVCT10>
             </OnChipMemories>
             <RvctStartVector></RvctStartVector>
@@ -337,7 +337,7 @@
             <v6Rtti>0</v6Rtti>
             <VariousControls>
               <MiscControls></MiscControls>
-              <Define>__MSP432P4111__</Define>
+              <Define></Define>
               <Undefine></Undefine>
               <IncludePath></IncludePath>
             </VariousControls>
@@ -529,7 +529,7 @@
           <targetInfo name="Target 1"/>
         </targetInfos>
       </component>
-      <component Cclass="Device" Cgroup="Startup" Cvendor="TexasInstruments" Cversion="3.2.2" condition="isMSP432P4111">
+      <component Cclass="Device" Cgroup="Startup" Cvendor="TexasInstruments" Cversion="3.2.2" condition="isMSP432P401R">
         <package license="license.txt" name="MSP432P4xx_DFP" schemaVersion="1.3" supportContact="http://e2e.ti.com/support/microcontrollers/msp430/" url="http://software-dl.ti.com/msp430/msp430_public_sw/mcu/msp430/msp432cmsis/latest/exports/" vendor="TexasInstruments" version="3.2.6"/>
         <targetInfos>
           <targetInfo name="Target 1"/>
@@ -537,21 +537,33 @@
       </component>
     </components>
     <files>
-      <file attr="config" category="source" condition="Startup ARM" name="Device\Source\startup_msp432p4111_uvision.s" version="3.2.2">
-        <instance index="0">RTE\Device\MSP432P4111\startup_msp432p4111_uvision.s</instance>
-        <component Cclass="Device" Cgroup="Startup" Cvendor="TexasInstruments" Cversion="3.2.2" condition="isMSP432P4111"/>
+      <file attr="config" category="source" condition="Startup ARM" name="Device\Source\startup_msp432p401r_uvision.s" version="3.2.2">
+        <instance index="0">RTE\Device\MSP432P401R\startup_msp432p401r_uvision.s</instance>
+        <component Cclass="Device" Cgroup="Startup" Cvendor="TexasInstruments" Cversion="3.2.2" condition="isMSP432P401R"/>
         <package license="license.txt" name="MSP432P4xx_DFP" schemaVersion="1.3" supportContact="http://e2e.ti.com/support/microcontrollers/msp430/" url="http://software-dl.ti.com/msp430/msp430_public_sw/mcu/msp430/msp432cmsis/latest/exports/" vendor="TexasInstruments" version="3.2.6"/>
         <targetInfos>
           <targetInfo name="Target 1"/>
         </targetInfos>
       </file>
-      <file attr="config" category="source" name="Device\Source\system_msp432p4111.c" version="3.2.2">
-        <instance index="0">RTE\Device\MSP432P4111\system_msp432p4111.c</instance>
-        <component Cclass="Device" Cgroup="Startup" Cvendor="TexasInstruments" Cversion="3.2.2" condition="isMSP432P4111"/>
+      <file attr="config" category="source" name="Device\Source\system_msp432p401r.c" version="3.2.2">
+        <instance index="0">RTE\Device\MSP432P401R\system_msp432p401r.c</instance>
+        <component Cclass="Device" Cgroup="Startup" Cvendor="TexasInstruments" Cversion="3.2.2" condition="isMSP432P401R"/>
         <package license="license.txt" name="MSP432P4xx_DFP" schemaVersion="1.3" supportContact="http://e2e.ti.com/support/microcontrollers/msp430/" url="http://software-dl.ti.com/msp430/msp430_public_sw/mcu/msp430/msp432cmsis/latest/exports/" vendor="TexasInstruments" version="3.2.6"/>
         <targetInfos>
           <targetInfo name="Target 1"/>
         </targetInfos>
+      </file>
+      <file attr="config" category="source" condition="Startup ARM" name="Device\Source\startup_msp432p4111_uvision.s" version="3.2.2">
+        <instance index="0" removed="1">RTE\Device\MSP432P4111\startup_msp432p4111_uvision.s</instance>
+        <component Cclass="Device" Cgroup="Startup" Cvendor="TexasInstruments" Cversion="3.2.2" condition="isMSP432P4111"/>
+        <package license="license.txt" name="MSP432P4xx_DFP" schemaVersion="1.3" supportContact="http://e2e.ti.com/support/microcontrollers/msp430/" url="http://software-dl.ti.com/msp430/msp430_public_sw/mcu/msp430/msp432cmsis/latest/exports/" vendor="TexasInstruments" version="3.2.6"/>
+        <targetInfos/>
+      </file>
+      <file attr="config" category="source" name="Device\Source\system_msp432p4111.c" version="3.2.2">
+        <instance index="0" removed="1">RTE\Device\MSP432P4111\system_msp432p4111.c</instance>
+        <component Cclass="Device" Cgroup="Startup" Cvendor="TexasInstruments" Cversion="3.2.2" condition="isMSP432P4111"/>
+        <package license="license.txt" name="MSP432P4xx_DFP" schemaVersion="1.3" supportContact="http://e2e.ti.com/support/microcontrollers/msp430/" url="http://software-dl.ti.com/msp430/msp430_public_sw/mcu/msp430/msp432cmsis/latest/exports/" vendor="TexasInstruments" version="3.2.6"/>
+        <targetInfos/>
       </file>
     </files>
   </RTE>
